# ChangeLog for sci-calculators/pcalc
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-calculators/pcalc/ChangeLog,v 1.23 2009/12/13 07:52:26 vapier Exp $

*pcalc-2 (13 Dec 2009)

  13 Dec 2009; Mike Frysinger <vapier@gentoo.org> +pcalc-2.ebuild:
  Version bump.

  13 Dec 2009; Mike Frysinger <vapier@gentoo.org> pcalc-1.3.ebuild:
  Stabilize for people.

  11 May 2008; <solar@gentoo.org> pcalc-1.3.ebuild:
  - cross compile fix

  20 Apr 2008; Richard Freeman <rich0@gentoo.org> pcalc-1.2.ebuild:
  amd64 stable - 218192

  20 Apr 2008; Raúl Porcel <armin76@gentoo.org> pcalc-1.2.ebuild:
  ia64/x86 stable wrt #218192

  19 Apr 2008; Markus Rothe <corsair@gentoo.org> pcalc-1.2.ebuild:
  Stable on ppc64; bug #218192

  18 Apr 2008; nixnut <nixnut@gentoo.org> pcalc-1.2.ebuild:
  Stable on ppc wrt bug 218192

  18 Apr 2008; Ferris McCormick <fmccor@gentoo.org> pcalc-1.2.ebuild:
  Sparc stable, Bug #218192.

  18 Apr 2008; Tobias Klausmann <klausman@gentoo.org> pcalc-1.2.ebuild:
  Stable on alpha, bug #218192

  18 Apr 2008; Jeroen Roovers <jer@gentoo.org> pcalc-1.2.ebuild:
  Stable for HPPA (bug #218192).

*pcalc-1.3 (18 Apr 2008)

  18 Apr 2008; Mike Frysinger <vapier@gentoo.org> +pcalc-1.3.ebuild:
  Version bump.

*pcalc-1.2 (03 Jan 2008)

  03 Jan 2008; Mike Frysinger <vapier@gentoo.org> +pcalc-1.2.ebuild:
  Version bump.

  06 Dec 2007; Christian Faulhammer <opfer@gentoo.org> pcalc-1.1.ebuild:
  stable x86, bug 194959

  02 Nov 2007; Steve Dibb <beandog@gentoo.org> pcalc-1.1.ebuild:
  amd64 stable, bug 194959

  15 Oct 2007; Tom Gall <tgall@gentoo.org> pcalc-1.1.ebuild:
  stable on ppc64, bug #194959

  10 Oct 2007; Lars Weiler <pylon@gentoo.org> pcalc-1.1.ebuild:
  stable ppc, bug #194959

  09 Oct 2007; Jeroen Roovers <jer@gentoo.org> pcalc-1.1.ebuild:
  Stable for HPPA (bug #194959).

  08 Oct 2007; Raúl Porcel <armin76@gentoo.org> pcalc-1.1.ebuild:
  alpha/ia64/sparc stable wrt #194959
